--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "pgn-parser": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/pgn-parser": "^2.1.0"
   }
 }
