--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write '**/*.{js,jsx,ts,tsx,css,json}'"
   },
   "dependencies": {
     "@types/node": "18.15.11",
