--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "npx prettier --write '**/*.{js,jsx,ts,tsx,css,json}'"
   },
   "dependencies": {
+    "@mliebelt/pgn-parser": "^1.4.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -18,7 +19,6 @@
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "openai": "^3.2.1",
-    "pgn-parser": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
