--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
+    "chess": "^1.1.0",
+    "chess-web-api": "^1.1.2",
+    "chess.js": "^1.0.0-beta.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "openai": "^3.2.1",
     "react": "18.2.0",
+    "react-chessboard": "^2.1.3",
     "react-dom": "18.2.0",
+    "semantic-ui-react": "^2.1.4",
     "typescript": "5.0.3"
   },
   "devDependencies": {
