--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chess": "^1.1.0",
     "chess-web-api": "^1.1.2",
     "chess.js": "^1.0.0-beta.5",
+    "classnames": "^2.3.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
