--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/pgn-parser": "^2.1.0"
   }
 }
