--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "npx prettier --write '**/*.{js,jsx,ts,tsx,css,json}'"
+    "format": "npx prettier --write '**/*.{js,jsx,ts,tsx,css,json}'",
+    "test": "jest"
   },
   "dependencies": {
     "@mliebelt/pgn-parser": "^1.4.7",
@@ -28,11 +29,16 @@
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "typescript": "5.0.3",
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
-    "@types/pgn-parser": "^2.1.0"
+    "@types/pgn-parser": "^2.1.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   }
 }
