--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^1.0.0",
     "axios": "^1.3.5",
     "chess": "^1.1.0",
     "chess-web-api": "^1.1.2",
