--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "web-streams-polyfill": "^3.2.1",
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
