--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "text-encoding": "^0.7.0",
     "web-streams-polyfill": "^3.2.1",
     "worker-loader": "^3.0.8"
   },
@@ -39,6 +40,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/pgn-parser": "^2.1.0",
+    "@types/text-encoding": "^0.0.36",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
