--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^1.0.0",
+    "app-root-path": "^3.1.0",
     "axios": "^1.3.5",
     "chess": "^1.1.0",
     "chess-web-api": "^1.1.2",
@@ -26,6 +27,8 @@
     "eventsource-parser": "^1.0.0",
     "next": "13.2.4",
     "openai": "^3.2.1",
+    "peggy": "^3.0.2",
+    "pgn-parser": "^2.2.0",
     "react": "18.2.0",
     "react-chessboard": "^2.1.3",
     "react-dom": "18.2.0",
@@ -39,10 +42,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
+    "@types/pegjs": "^0.10.3",
     "@types/pgn-parser": "^2.1.0",
     "@types/text-encoding": "^0.0.36",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "pegjs-loader": "^0.5.6",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
