--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "decs.d.ts"],
+  "include": [
+    "next-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "decs.d.ts",
+    "typings.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
